<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_bottom"
        android:icon="@drawable/ic_home_inactive"
        android:title="@string/home"
        />
    <item
        android:id="@+id/search_bottom"
        android:icon="@drawable/ic_search_inactive"
        android:title="@string/searchtxt" />
    <item
        android:id="@+id/category_bottom"
        android:icon="@drawable/ic_category_inactive"
        android:title="@string/category_text" />
    <item
        android:id="@+id/account_bottom"
        android:icon="@drawable/ic_profile_inactive"
        android:title="@string/account_txt" />
    <item
        android:id="@+id/notification_bottom"
        android:icon="@drawable/ic_notification_icon"
        android:title="@string/notification" />
</menu>